@@ -1,4 +1,7 @@
 ** v2.15, 04.09.2016**
+* Disabled ObjectiveTracker skin, it caused the UI hide. -.-
+
+** v2.15, 04.09.2016**
 * Change Tooltip font.
 * Update the ObjectiveTracker skin.
 * Add new bank/bag mover to install.
