@@ -20,14 +20,10 @@ local flat = [[Interface\AddOns\ElvUI_MerathilisUI\media\textures\Flat]]
 if E.db.mui.installed == nil then return; end
 
 local ChangeLog = CreateFrame("frame")
-local ChangeLogData = [=[|cffff7d0av2.15|r, 04.09.2016
+local ChangeLogData = [=[|cffff7d0av2.15.1|r, 04.09.2016
 
 |cffff7d0aChanges:|r
- |cffff7d0a•|r Change Tooltip font.
- |cffff7d0a•|r Update the ObjectiveTracker skin.
- |cffff7d0a•|r Add new bank/bag mover to install.
- |cffff7d0a•|r Add "Flight Masters's Whistle" to the LocPanel teleport menu.
- |cffff7d0a•|r Add a new Chat Tab for whispers. Do the install for Chat again.
+ |cffff7d0a•|r Disabled ObjectiveTracker skin, it caused the UI hide. -.-
 
 |cffff7d0aNotes:|r
  |cffff7d0a•|r The Heal Layout is not finished yet. Will work on it in the future.
